[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "gesp"
version = "0.2.0"
authors = [
  { name="Niklas Wais", email="niklas.wais@uni-leipzig.de" },
]
description = "convenient scraping of german court decisions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=23.2.0",
    "Automat>=22.10.0",
    "certifi>=2024.2.0",
    "cffi>=1.16.0",
    "charset-normalizer>=3.3.0",
    "constantly>=23.10.0",
    "cryptography>=42.0.0",
    "cssselect>=1.2.0",
    "filelock>=3.13.0",
    "hyperlink>=21.0.0",
    "idna>=3.6",
    "incremental>=22.10.0",
    "itemadapter>=0.8.0",
    "itemloaders>=1.1.0",
    "jmespath>=1.0.1",
    "lxml>=5.1.0",
    "parsel>=1.8.1",
    "Protego>=0.3.0",
    "pyasn1>=0.5.1",
    "pyasn1-modules>=0.3.0",
    "pycparser>=2.21",
    "PyDispatcher>=2.0.7",
    "pyOpenSSL>=24.0.0",
    "queuelib>=1.6.2",
    "requests>=2.31.0",
    "requests-file>=1.5.1",
    "Scrapy>=2.11.0",
    "service-identity>=24.1.0",
    "six>=1.16.0",
    "tldextract>=5.1.1",
    "Twisted>=24.2.0",
    "typing_extensions>=4.9.0",
    "urllib3>=2.2.0",
    "w3lib>=2.1.2",
    "zope.interface>=6.1"
]
[project.urls]
"Homepage" = "https://github.com/niklaswais/gesp"
"Bug Tracker" = "https://github.com/niklaswais/gesp/issues"
