[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gesp"
version = "0.2.1"
authors = [{ name = "Niklas Wais", email = "niklas.wais@tum.de" }]
description = "convenient scraping of german court decisions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scrapy>=2.11",
    "requests>=2.31",
    "lxml>=5.1",
    "tldextract>=5.1",
    "parsel>=1.8",
    "cssselect>=1.2",
    "w3lib>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
gesp = "gesp.__main__:main"

[project.urls]
Homepage = "https://github.com/niklaswais/gesp"
"Bug Tracker" = "https://github.com/niklaswais/gesp/issues"

[tool.hatch.build.targets.wheel]
packages = ["gesp"]

[tool.hatch.build.targets.wheel.force-include]
"gesp/data/ECLI-Gerichtscodes.csv" = "gesp/data/ECLI-Gerichtscodes.csv"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Legacy modules — out of scope for cleanup (parser internals, scraper extractors,
# site-specific request payloads). Lint kept off so structural drift in these
# files doesn't block CI.
"gesp/spiders/*.py" = ["E701", "E702", "E712", "E722", "E731", "E741", "F841", "F821", "F601", "B007", "B904", "UP031", "UP028", "UP032"]
"gesp/src/get_text.py" = ["E701", "E702", "E712", "E722", "E731", "F841", "B007", "B904", "UP031", "UP028", "UP032"]
"gesp/src/htmlparser.py" = ["E701", "E702", "E712", "E722", "E731", "E741", "F841", "B007", "B904", "UP031", "UP028", "UP032"]
"gesp/src/config.py" = ["E501", "UP031", "UP032"]
"gesp/src/output.py" = ["W292"]

[tool.pytest.ini_options]
markers = ["live: runs real network calls against court portals (skipped by default)"]
addopts = "-m 'not live'"
testpaths = ["tests"]
